Layout updates * added latest font awesome

--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,35 @@
 /* mixins
 use full theme mixins
 */
+
+#features h1 {
+    color: rgba(62, 98, 165, 0.90);
+
+}
+
+
+#features h1  {
+    /*color: #777777;*/
+    font-size: 24px;
+    border-bottom: 1px dotted rgba(62, 98, 165, 0.50);
+    padding-bottom: 10px;
+}
+
+#features {
+    padding-bottom: 80px;
+    border-bottom: 1px dotted #ebebeb;
+    /*background-color: rgba(62, 98, 165, 0.08);*/
+}
+
+.cover {
+    /*background-color: rgba(62, 98, 165, 0.10);*/
+    /*border-bottom: 1px dotted rgba(62, 98, 165, 0.50);*/
+}
+
+.cover h1:hover {
+    color: #ffffff;
+}
+
+#articles {
+    /*background-color: rgba(62, 98, 165, 0.15);*/
+}
