--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ use full theme mixins
 
 #features h1  {
     /*color: #777777;*/
-    font-size: 24px;
+    font-size: 1.8rem;
     border-bottom: 1px dotted rgba(62, 98, 165, 0.50);
     padding-bottom: 10px;
 }
@@ -24,13 +24,28 @@ use full theme mixins
     /*background-color: rgba(62, 98, 165, 0.08);*/
 }
 
+#features aside p {
+    font-size: 1.4rem;
+}
+
 .cover {
     /*background-color: rgba(62, 98, 165, 0.10);*/
     /*border-bottom: 1px dotted rgba(62, 98, 165, 0.50);*/
 }
 
+.cover h1 {
+    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+}
+
 .cover h1:hover {
     color: #ffffff;
+
+}
+
+figure.pull-left {
+   margin: 20px;
+    margin-top: 0px;
+    margin-left: 0px;
 }
 
 #articles {
