--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ use full theme mixins
 #features
 {
     padding-bottom: 80px;
-    border-bottom: 1px dotted rgba(62, 98, 165, 0.50);
 }
 
 #features aside p
@@ -57,6 +56,7 @@ figure.pull-left
 
 #articles
 {
+    padding-bottom: 100px;
 }
 
 #articles H1
