--- a/css/style.css
+++ b/css/style.css
@@ -1,75 +1,86 @@
-
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
 /* mixins
 use full theme mixins
 */
-
-#introduction h1
-{
-    color: rgba(62, 98, 165, 0.90);
+#introduction h1 {
+  color: rgba(62, 98, 165, 0.9);
 }
-
-#features h1, #introduction h1
-{
-    color: rgba(62, 98, 165, 0.90);
+#features h1,
+#introduction h1 {
+  color: rgba(62, 98, 165, 0.9);
 }
-
-#features h1
-{
-    font-size: 1.8rem;
-    border-bottom: 1px dotted rgba(62, 98, 165, 0.50);
-    padding-bottom: 10px;
+#features h1 {
+  font-size: 1.8rem;
+  border-bottom: 1px dotted rgba(62, 98, 165, 0.5);
+  padding-bottom: 10px;
 }
-
-#features
-{
-    padding-bottom: 80px;
+#features {
+  padding-bottom: 80px;
 }
-
-#features aside p
-{
-    font-size: 1.4rem;
+#features aside p {
+  font-size: 1.4rem;
 }
-
-.cover
-{
+.cover h1 {
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
 }
-
-.cover h1
-{
-    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+.cover h1:hover {
+  color: #ffffff;
 }
-
-.cover h1:hover
-{
-    color: #ffffff;
+figure.pull-left {
+  margin: 20px;
 }
-
-figure.pull-left
-{
-    margin: 20px;
+#articles {
+  padding-bottom: 100px;
+  background-color: rgba(20, 150, 214, 0.06);
 }
-
-#articles
-{
-    padding-bottom: 100px;
+#articles H1 {
+  color: #0b3e85;
 }
-
-#articles H1
-{
-    color: rgba(62, 98, 165, 0.90);
+.newsletter {
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: rgba(11, 62, 133, 0.75);
+  color: #ffffff;
+  margin-bottom: 20px;
 }
-
-.newsletter
-{
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: rgba(62, 98, 165, 0.80);
-    color: #ffffff;
-    margin-bottom: 20px;
+.navbar-default .navbar-brand {
+  color: transparent;
+  font-weight: bold !important;
+  background-image: url('../img/mahc-logo-brand.png');
+  background-repeat: no-repeat;
+  background-position: center center;
 }
-
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+  color: transparent;
+  background-color: transparent;
+  border: none;
+  border-bottom: none;
+}
+.navbar-default {
+  background-color: rgba(139, 194, 55, 0.9);
+  border-bottom: none;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #fff;
+  font-weight: bold;
+}
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+  background-color: rgba(139, 194, 55, 0.5);
+  color: #FFF;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #f89224;
+  background-color: transparent;
+}
+footer {
+  background: #1496d6;
+  padding-bottom: 60px;
+  padding-top: 60px;
+  color: #fff;
+}
