--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -151,7 +151,7 @@ footer .footer .copy-info
 
 footer .footer .copy-info .social i
 {
-    font-size: 16px;
+    font-size: 32px;
 }
 
 footer .footer .copy-info p
@@ -331,5 +331,14 @@ footer h1
 
 .cover
 {
+}
+
+footer
+{
+}
+
+main
+{
+    padding-bottom: 100px;
 }
 
