--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ use full theme mixins
 }
 #features h1 {
   font-size: 1.8rem;
-  border-bottom: 1px dotted rgba(62, 98, 165, 0.5);
+  border-bottom: 1px dotted rgba(62, 98, 165, 0.9);
   padding-bottom: 10px;
 }
 #features {
@@ -33,7 +33,9 @@ figure.pull-left {
 }
 #articles {
   padding-bottom: 100px;
-  background-color: rgba(20, 150, 214, 0.06);
+  background-color: #e3e9f1;
+  background-repeat: repeat;
+  background-image: url('../img/shattered.png');
 }
 #articles H1 {
   color: #0b3e85;
@@ -66,6 +68,7 @@ figure.pull-left {
 .navbar-default .navbar-nav > li > a {
   color: #fff;
   font-weight: bold;
+  font-size: 16px;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
@@ -79,8 +82,14 @@ figure.pull-left {
   background-color: transparent;
 }
 footer {
-  background: #1496d6;
-  padding-bottom: 60px;
-  padding-top: 60px;
+  background: rgba(139, 194, 55, 0.9);
+  padding-bottom: 20px;
+  padding-top: 20px;
   color: #fff;
+}
+footer .col-md-3 {
+  height: 200px;
+}
+body {
+  background-image: url('../img/subtle_dots.png');
 }
