--- a/css/style.less
+++ b/css/style.less
@@ -2,12 +2,15 @@
 @carrot-orange: rgba(248, 146, 36, 1);
 @electric-blue: rgba(20, 150, 214, 1);
 @yellow-green: rgba(139, 194, 55, 1);
-@article-bg: rgba(20, 150, 214, 0.06);
+@article-bg: rgba(20, 150, 214, 0.23);
 @brand-text: rgba(11, 62, 133, 1);
 @nav-bg: rgba(227, 233, 241, 1);
 @margins: 10px;
 @yellow-green-nav: rgba(139, 194, 55, 0.9);
 @yellow-green-nav-hover: rgba(139, 194, 55, 0.5);
+@footer-height: 200px;
+@news-letter-bg: rgba(11, 62, 133, 0.8);
+@shattered-bg: "../img/shattered.png";
 
 
 /* ==========================================================================
@@ -32,7 +35,7 @@ use full theme mixins
 #features h1
 {
     font-size: 1.8rem;
-    border-bottom: 1px dotted rgba(62, 98, 165, 0.50);
+    border-bottom: 1px dotted rgba(62, 98, 165, 0.9);
     padding-bottom: 10px;
 }
 
@@ -68,7 +71,9 @@ figure.pull-left
 #articles
 {
     padding-bottom: 100px;
-    background-color: @article-bg;
+    background-color: @nav-bg;
+    background-repeat: repeat;
+    background-image: url('../img/shattered.png');
 }
 
 #articles H1
@@ -113,6 +118,7 @@ figure.pull-left
 {
     color: #fff;
     font-weight: bold;
+    font-size: 16px;
 }
 
 .navbar-default .navbar-nav > .open > a,
@@ -132,9 +138,19 @@ figure.pull-left
 
 footer
 {
-    background: @electric-blue;
-    padding-bottom: 60px;
-    padding-top: 60px;
+    background: @yellow-green-nav;
+    padding-bottom: 20px;
+    padding-top: 20px;
     color: #fff;
+}
+
+footer .col-md-3
+{
+    height: @footer-height;
+}
+
+body
+{
+    background-image: url('../img/subtle_dots.png');
 }
 
