Brand logo now displays in large desktops * added borders to footer center panel

--- a/css/style.less
+++ b/css/style.less
@@ -97,6 +97,7 @@ figure.pull-left
     background-image: url('../img/mahc-logo-brand.png');
     background-repeat: no-repeat;
     background-position: center center;
+    background-color: @yellow-green;
 }
 
 .navbar-default .navbar-brand:hover,
@@ -152,5 +153,16 @@ footer .col-md-3
 body
 {
     background-image: url('../img/subtle_dots.png');
+}
+
+.right-border
+{
+    border-right: 1px dotted #fff;
+}
+
+.border-left
+{
+    
+    border-left: 1px dotted #fff;
 }
 
