--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ figure.pull-left {
   background-image: url('../img/mahc-logo-brand.png');
   background-repeat: no-repeat;
   background-position: center center;
+  background-color: #8bc237;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
@@ -92,4 +93,10 @@ footer .col-md-3 {
 }
 body {
   background-image: url('../img/subtle_dots.png');
+}
+.right-border {
+  border-right: 1px dotted #fff;
+}
+.border-left {
+  border-left: 1px dotted #fff;
 }
