--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ figure.pull-left {
 .navbar-default .navbar-nav > li > a {
   color: #fff;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 15px;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
@@ -99,4 +99,7 @@ body {
 }
 .border-left {
   border-left: 1px dotted #fff;
+}
+.text-shadow {
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
 }
