--- a/css/style.less
+++ b/css/style.less
@@ -119,7 +119,7 @@ figure.pull-left
 {
     color: #fff;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 15px;
 }
 
 .navbar-default .navbar-nav > .open > a,
@@ -162,7 +162,12 @@ body
 
 .border-left
 {
-    
     border-left: 1px dotted #fff;
 }
+
+.text-shadow
+{
+    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+}
+
 
