--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,6 @@ body {
 .text-shadow {
   text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
 }
+header .overlay {
+  background-color: rgba(248, 146, 36, 0.7);
+}
